--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,14 +1,85 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+
+  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+       More info: h5bp.com/b/378 -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>LifeStream - Webcam LifeLapse</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+
+  <!-- Framework CSS -->
+  <link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">
+  <!--[if lt IE 8]><link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+
+  <link href='http://fonts.googleapis.com/css?family=Sansita+One|Lobster+Two' rel='stylesheet' type='text/css'>
+
+  <link type="text/css" rel="stylesheet" href="css/colorbrewer.css"/>
+  <link type="text/css" rel="stylesheet" href="css/calendar.css"/>
+
+  <link rel="stylesheet" href="css/Aristo/Aristo.css">
+  <link rel="stylesheet" href="css/style.css">
+  
+  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+  <!-- All JavaScript at the bottom, except this Modernizr build incl. Respond.js
+       Respond is a polyfill for min/max-width media queries. Modernizr enables HTML5 elements & feature detects; 
+       for optimal performance, create your own custom Modernizr build: www.modernizr.com/download/ -->
+  <script src="js/libs/modernizr-2.0.6.min.js"></script>
+</head>
+<body>
+  <div role="main" class="container">
+    <h1>Lifestream - Webcam LifeLapse</h1>
+    <div id="chart"></div>
+  </div>
+
+  <!-- JavaScript at the bottom for fast page loading -->
+
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.4.min.js"><\/script>')</script>
+
+
+  <script defer src="js/libs/d3/d3.js"></script>
+  <script defer src="js/libs/d3/d3.time.js"></script>
+  <script defer src="js/calendar.js"></script>
+
+  <script defer src="js/libs/jquery-ui-1.8.16.custom.min.js"></script>
+  <script defer src="js/libs/underscore-min.js"></script>
+  <script defer src="js/libs/backbone-min.js"></script>
+
+  <!-- scripts concatenated and minified via build script -->
+  <script defer src="js/plugins.js"></script>
+  <script defer src="js/script.js"></script>
+  <!-- end scripts -->
+
+  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+       chromium.org/developers/how-tos/chrome-frame-getting-started -->
+  <!--[if lt IE 7 ]>
+    <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script defer>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+  <![endif]-->
+
+
+</body>
+
+
     <title>DJI</title>
-    <script type="text/javascript" src="d3.js"></script>
-    <script type="text/javascript" src="d3.csv.js"></script>
-    <script type="text/javascript" src="d3.time.js"></script>
-    <script type="text/javascript" src="calendar.js"></script>
-    <link type="text/css" rel="stylesheet" href="colorbrewer.css"/>
-    <link type="text/css" rel="stylesheet" href="calendar.css"/>
-  </head>
+          </head>
   <body>
     <div id="chart"></div>
     <script type="text/javascript" src="dji.js"></script>
