add link to source on github, and correct url to image

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -45,6 +45,7 @@
   <div role="main" class="container">
     <h1>Lifestream - Webcam LifeLapse</h1>
     <div id="chart"></div>
+    <p style="text-align:center"><a href="http://github.com/alx/lifestream">Source on github</a></p>
   </div>
 
   <!-- JavaScript at the bottom for fast page loading -->
@@ -76,12 +77,4 @@
 
 
 </body>
-
-
-    <title>DJI</title>
-          </head>
-  <body>
-    <div id="chart"></div>
-    <script type="text/javascript" src="dji.js"></script>
-  </body>
 </html>
